[package]
name = "ryml"
authors = ["Caleb Smith <c.smith@tuta.io>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NiceneNerd/ryml"
keywords = ["yaml", "ryml", "rapidyaml", "ffi", "bindings"]
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0.72"
thiserror = "1.0.31"
startup = "0.1.1"

[build-dependencies]
cxx-build = "1.0.72"
