[package]
name = "ryml"
authors = ["Caleb Smith <c.smith@tuta.io>"]
description = "Parse YAML and do it fast: Rapid YAML bindings for Rust"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/NiceneNerd/ryml"
keywords = ["yaml", "ryml", "rapidyaml", "ffi", "bindings"]
version = "0.1.3"
edition = "2021"

[dependencies]
auto-enum = "0.1.2"
cxx = "1.0.72"
thiserror = "1.0.31"

[build-dependencies]
cxx-build = "1.0.72"
